--- a/templates/main.html
+++ b/templates/main.html
@@ -5,19 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Michał Chrzanowski">
     <title>YouTube Player interface</title>
-	<link href="{{ url_for('static', filename='css/spark.min.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.css') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome-all.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bulma.css') }}">
   </head>
-  <body>
+  <body style="background-color: #9b969c">
   <section class="section">
     <div class="container">
       <h1 class="title">
-        Hello World
+        YouTube player web interface
       </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
+        <div class="field">
+          <label class="label">Enter YT link, video ID or search phrase</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input is-success" type="text" placeholder="Search video">
+            <span class="icon is-small is-left">
+              <i class="fa fa-play-circle" aria-hidden="true"></i>
+            </span>
+            <span class="icon is-small is-right">
+              <i class="fa fa-check"></i>
+            </span>
+          </div>
+          <p class="help is-success">The YouTube video link is valid.</p>
+        </div>
     </div>
   </section>
   </body>
