--- a/templates/main.html
+++ b/templates/main.html
@@ -9,31 +9,71 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome-all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bulma.css') }}">
 
-    <script type=text/javascript src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}">
+    <script type=text/javascript src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
 
+    <script>
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
 
-
-          $(function() {
-            $('a#calculate').bind('click', function() {
-              $.getJSON($SCRIPT_ROOT + '/_add_numbers', {
-                a: $('input[name="a"]').val(),
-                b: $('input[name="b"]').val()
-              }, function(data) {
-                $("#result").text(data.result);
-              });
-              return false;
-            });
-          });
-
-        $(document).ready(function(){
-            $("#input_container").click(function(){
+    <script>
+        $(document).keyup(function(){
+            $input_value = $("#input_field").val();
+            if($input_value.includes("watch")) {
                 $("#input_info").text("The YouTube video link is valid.");
-                $("#input_info").removeClass("is-warning");
                 $("#input_info").addClass("is-success");
-                $("#input_field").removeClass("is-warning");
                 $("#input_field").addClass("is-success");
                 $("#input_icon").html('<i class="fa fa-check"></i>');
+            }
+            else {
+                $("#input_info").text("This is not YouTube video link or ID. Search will be performed.");
+                $("#input_info").removeClass("is-success");
+                $("#input_field").removeClass("is-success");
+                $("#input_icon").html('<i class="fa fa-search"></i>');
+            }
+        });
+
+        $(document).mouseup(function(){
+            $input_value = $("#input_field").val();
+            if($input_value.includes("watch")) {
+                $("#input_info").text("The YouTube video link is valid.");
+                $("#input_info").addClass("is-success");
+                $("#input_field").addClass("is-success");
+                $("#input_icon").html('<i class="fa fa-check"></i>');
+            }
+            else {
+                $("#input_info").text("This is not YouTube video link or ID. Search will be performed.");
+                $("#input_info").removeClass("is-success");
+                $("#input_field").removeClass("is-success");
+                $("#input_icon").html('<i class="fa fa-search"></i>');
+            }
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("a").click(function(){
+                $video_id = $(this).attr("id")
+                $link_selector = "#".concat($video_id)
+                $row_selector = $link_selector.concat("-row")
+
+                $.getJSON($SCRIPT_ROOT + '/play_video', {
+                    video_id: $video_id
+                  }, function(data) {
+                    $status = data.status;
+                    if (data.status !== "fail")
+                    {
+                        $("tr").removeClass("is-selected");
+                        $("a").removeClass("is-warning");
+                        $("a").html('<i class="fa fa-play"></i>');
+                    }
+
+                    if (data.status == "playing")
+                    {
+                        $($row_selector).addClass("is-selected");
+                        $($link_selector).addClass("is-warning");
+                        $($link_selector).html('<i class="fa fa-stop"></i>');
+                    }
+                  });
+                return false;
             });
         });
     </script>
@@ -45,24 +85,60 @@
         <h1 class="title">
             YouTube player web interface
         </h1>
-<p><input type=text size=5 name=a> +
-   <input type=text size=5 name=b> =
-   <span id=result>?</span>
-<p><a href=# id=calculate>calculate server side</a>
-        <div class="field" id="input_container">
-            <label class="label">Enter YT link, video ID or search phrase</label>
-            <div class="control has-icons-left has-icons-right">
-                <input id="input_field" class="input" type="text" placeholder="Play video or search for it">
-                <span class="icon is-small is-left">
-                  <i class="fa fa-play-circle" aria-hidden="true"></i>
-                </span>
-                <span id="input_icon" class="icon is-small is-right">
-                </span>
+        <form name="search_box" action="/" method="get">
+            <div class="field" id="input_container">
+                <label class="label">Enter YT link, video ID or search phrase</label>
+                <div class="control has-icons-left has-icons-right">
+                    <input id="input_field" name="search" class="input" type="text" placeholder="Play video or search for it">
+                    <span class="icon is-small is-left">
+                      <i class="fa fa-play-circle" aria-hidden="true"></i>
+                    </span>
+                    <span id="input_icon" class="icon is-small is-right">
+                    </span>
+                </div>
+                <p id="input_info" class="help">
+                    This is not YouTube video link or ID. Search will be performed.
+                </p>
+                <input type="submit" style="position: absolute; left: -9999px"/>
             </div>
-            <p id="input_info" class="help">
-                This is not YouTube video link or ID. Search will be performed.
-            </p>
-        </div>
+        </form>
+    </div>
+    <div class="container" style="margin-top: 30px;">
+        {% if display_results %}
+        <h2>Search results</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th><i class="fa fa-circle-o-notch" aria-hidden="true"></i></th>
+                <th>Title</th>
+                <th>Play</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tfoot>
+            <tr>
+                <th><i class="fa fa-circle-o-notch" aria-hidden="true"></i></th>
+                <th>Title</th>
+                <th>Play</th>
+                <th></th>
+            </tr>
+            </tfoot>
+            <tbody>
+            {% for result in search_results %}
+            <tr id="{{ result['video_id'] }}-row" >
+                <th></th>
+                <td> {{ result['title'] }} </td>
+                <td>
+                    <a id="{{ result['video_id'] }}" href="#" class="button">
+                        <i class="fa fa-play"></i>
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
     </div>
 </section>
 </body>
