finished minimum functionality on frontend.

--- a/templates/main.html
+++ b/templates/main.html
@@ -79,9 +79,9 @@
     </script>
 
 </head>
-<body style="background-color: #9b969c">
+<body style="background-color: #FFB16C">
 <section class="section">
-    <div class="container">
+    <div class="container" style="width: 700px">
         <h1 class="title">
             YouTube player web interface
         </h1>
@@ -103,10 +103,10 @@
             </div>
         </form>
     </div>
-    <div class="container" style="margin-top: 30px;">
+    <div class="container" style="margin-top: 30px; width: 700px;">
         {% if display_results %}
         <h2>Search results</h2>
-        <table class="table">
+        <table class="table" style="width: 700px">
             <thead>
             <tr>
                 <th><i class="fa fa-circle-o-notch" aria-hidden="true"></i></th>
