--- a/templates/main.html
+++ b/templates/main.html
@@ -103,6 +103,37 @@
             </div>
         </form>
     </div>
+
+    <div class="container box" style="margin-top: 30px; width: 700px;">
+      <article class="media">
+        <div class="media-left">
+          <figure class="image is-64x64">
+            <img src="" alt="Image">
+          </figure>
+        </div>
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <strong id="playing_title">John Smith</strong> <small id="playiong_duration">@johnsmith</small>
+            </p>
+          </div>
+          <nav class="level is-mobile">
+            <div class="level-left">
+              <a class="level-item">
+                <span class="icon is-small"><i class="fas fa-reply"></i></span>
+              </a>
+              <a class="level-item">
+                <span class="icon is-small"><i class="fas fa-retweet"></i></span>
+              </a>
+              <a class="level-item">
+                <span class="icon is-small"><i class="fas fa-heart"></i></span>
+              </a>
+            </div>
+          </nav>
+        </div>
+      </article>
+    </div>
+
     <div class="container" style="margin-top: 30px; width: 700px;">
         {% if display_results %}
         <h2>Search results</h2>
