frontend almost ready. need to polish position of buttons.

--- a/templates/main.html
+++ b/templates/main.html
@@ -18,37 +18,37 @@
     </script>
 
     <!--<script>-->
-        <!--$(document).keyup(function(){-->
-            <!--$input_value = $("#input_field").val();-->
-            <!--if($input_value.includes("watch")) {-->
-                <!--$("#input_info").text("The YouTube video link is valid.");-->
-                <!--$("#input_info").addClass("is-success");-->
-                <!--$("#input_field").addClass("is-success");-->
-                <!--$("#input_icon").html('<i class="fa fa-check"></i>');-->
-            <!--}-->
-            <!--else {-->
-                <!--$("#input_info").text("This is not YouTube video link or ID. Search will be performed.");-->
-                <!--$("#input_info").removeClass("is-success");-->
-                <!--$("#input_field").removeClass("is-success");-->
-                <!--$("#input_icon").html('<i class="fa fa-search"></i>');-->
-            <!--}-->
-        <!--});-->
+    <!--$(document).keyup(function(){-->
+    <!--$input_value = $("#input_field").val();-->
+    <!--if($input_value.includes("watch")) {-->
+    <!--$("#input_info").text("The YouTube video link is valid.");-->
+    <!--$("#input_info").addClass("is-success");-->
+    <!--$("#input_field").addClass("is-success");-->
+    <!--$("#input_icon").html('<i class="fa fa-check"></i>');-->
+    <!--}-->
+    <!--else {-->
+    <!--$("#input_info").text("This is not YouTube video link or ID. Search will be performed.");-->
+    <!--$("#input_info").removeClass("is-success");-->
+    <!--$("#input_field").removeClass("is-success");-->
+    <!--$("#input_icon").html('<i class="fa fa-search"></i>');-->
+    <!--}-->
+    <!--});-->
 
-        <!--$(document).mouseup(function(){-->
-            <!--$input_value = $("#input_field").val();-->
-            <!--if($input_value.includes("watch")) {-->
-                <!--$("#input_info").text("The YouTube video link is valid.");-->
-                <!--$("#input_info").addClass("is-success");-->
-                <!--$("#input_field").addClass("is-success");-->
-                <!--$("#input_icon").html('<i class="fa fa-check"></i>');-->
-            <!--}-->
-            <!--else {-->
-                <!--$("#input_info").text("This is not YouTube video link or ID. Search will be performed.");-->
-                <!--$("#input_info").removeClass("is-success");-->
-                <!--$("#input_field").removeClass("is-success");-->
-                <!--$("#input_icon").html('<i class="fa fa-search"></i>');-->
-            <!--}-->
-        <!--});-->
+    <!--$(document).mouseup(function(){-->
+    <!--$input_value = $("#input_field").val();-->
+    <!--if($input_value.includes("watch")) {-->
+    <!--$("#input_info").text("The YouTube video link is valid.");-->
+    <!--$("#input_info").addClass("is-success");-->
+    <!--$("#input_field").addClass("is-success");-->
+    <!--$("#input_icon").html('<i class="fa fa-check"></i>');-->
+    <!--}-->
+    <!--else {-->
+    <!--$("#input_info").text("This is not YouTube video link or ID. Search will be performed.");-->
+    <!--$("#input_info").removeClass("is-success");-->
+    <!--$("#input_field").removeClass("is-success");-->
+    <!--$("#input_icon").html('<i class="fa fa-search"></i>');-->
+    <!--}-->
+    <!--});-->
     <!--</script>-->
     <script>
         $(document).ready(function(){
@@ -95,7 +95,7 @@
                     <span class="icon is-small is-left">
                       <i class="fa fa-play-circle" aria-hidden="true"></i>
                     </span>
-                        <span id="input_icon" class="icon is-small is-right">
+                    <span id="input_icon" class="icon is-small is-right">
                             <i class="fa fa-search"></i>
                         </span>
                 </div>
@@ -107,54 +107,52 @@
     </div>
 
     <div class="container box" style="margin-top: 10px; width: 700px;">
-          <p class="title has-text-centered">Now playing</p>
-      <article class="media" style="margin-top: 10px;">
-        <div class="media-left">
-          <figure class="image is-64x64">
-            <img src="" alt="Image">
-          </figure>
-        </div>
-        <nav class="media-content">
-          <nav class="level">
-              <div class="level-item has-text-centered">
-                <div>
-                  <p class="title">
-                      <input class="slider is-success is-circle" step="1" min="0" max="100" value="50" type="range">
-                  </p>
-                  <p class="heading">volume</p>
-                </div>
-              </div>
-              <div class="level-item has-text-centered">
-                <div>
-                  <p class="title">title</p>
-                  <p class="heading">title</p>
-                </div>
-              </div>
-              <div class="level-item has-text-centered">
-                <div>
-                  <p class="title">00:00</p>
-                  <p class="heading">duration</p>
-                </div>
-              </div>
-          </nav>
-          <nav class="level">
-            <div class="level-item has-text-centered">
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-play"></i></span>
-              </a>
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-pause"></i></span>
-              </a>
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-stop"></i></span>
-              </a>
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-window-close"></i></span>
-              </a>
+        <p class="title has-text-centered">Now playing</p>
+        <article class="media" style="margin-top: 10px;">
+            <div class="media-left">
+                <figure class="image is-64x64">
+                    <img src="" alt="Image">
+                </figure>
             </div>
-          </nav>
-        </div>
-      </article>
+            <nav class="media-content">
+                <nav class="level">
+                    <div class="level-item has-text-centered">
+                        <div>
+                            <p class="title">
+                                <input class="slider is-success is-circle" step="1" min="0" max="100" value="50" type="range">
+                            </p>
+                            <p class="heading">volume</p>
+                        </div>
+                    </div>
+                    <div class="level-item has-text-centered">
+                        <div>
+                            <p class="title">title</p>
+                            <p class="heading">title</p>
+                        </div>
+                    </div>
+                    <div class="level-item has-text-centered">
+                        <div>
+                            <p class="title">00:00</p>
+                            <p class="heading">duration</p>
+                        </div>
+                    </div>
+                </nav>
+                <nav class="level">
+                        <div class="level-item has-text-centered"><a class="button">
+                            <span class="icon is-small"><i class="fa fa-play"></i></span>
+                        </a></div>
+                        <div class="level-item has-text-centered"><a class="button">
+                            <span class="icon is-small"><i class="fa fa-pause"></i></span>
+                        </a></div>
+                        <div class="level-item has-text-centered"><a class="button">
+                            <span class="icon is-small"><i class="fa fa-stop"></i></span>
+                        </a></div>
+                        <div class="level-item has-text-centered"><a class="button">
+                            <span class="icon is-small"><i class="fa fa-window-close"></i></span>
+                        </a></div>
+                </nav>
+            </nav>
+        </article>
     </div>
 
     <div class="container" style="margin-top: 30px; width: 700px;">
