minor slider fix for mobile use.

--- a/templates/main.html
+++ b/templates/main.html
@@ -128,8 +128,8 @@
                     <div class="level-item has-text-centered">
                         <div>
                             <p class="title">
-                                <input class="slider is-success is-circle" id="track-volume" step="1" min="0" max="100"
-                                       value="50" type="range">
+                                <input class="slider is-success is-circle is-large" id="track-volume"
+                                       step="1" min="0" max="100" value="50" type="range">
                             </p>
                             <p class="heading">volume</p>
                         </div>
