--- a/templates/main.html
+++ b/templates/main.html
@@ -143,6 +143,9 @@
                     <div class="level-item has-text-centered"><a class="button" id="track-stop">
                         <span class="icon is-small"><i class="fa fa-stop"></i></span>
                     </a></div>
+                    <div class="level-item has-text-centered"><a class="button" id="track-pause">
+                        <span class="icon is-small"><i class="fa fa-pause"></i></span>
+                    </a></div>
                 </nav>
             </nav>
         </article>
